[package]
name = "better-blockmap"
description = "Generate better blockmap files for electron-builder"
version = "1.0.0"
edition = "2021"
authors = ["Fedor Indutny <fedor@indutny.com>"]
repository = "https://github.com/indutny/better-blockmap"
license = "MIT"
keywords = ["rabin","fingerprint","hash","blockmap"]
categories = ["cryptography"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.5", features = ["derive"] }
blake2 = "0.10.4"
sha2 = "0.10.2"
base64 = "0.13.0"
flate2 = "1.0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.79"

[dependencies.rug]
version = "1.15"
default-features = false
features = ["integer"]
optional = true

[features]
window_size = ["rug"]
